이채영/chapter11/Elastic-Load-Balancer/chapter11.4.1-Create-Elastic-Load-Balancer/Security_Group.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: Create Security Group
# ------------------------------------------------------------#
# Input Parameters
# ------------------------------------------------------------#
Parameters:
  SystemName:
    Description: "System name of each resource names."
    Type: String
    Default: "gr"
  EnvName:
    Description: "Environment name of each resource names."
    Type: String
    Default: "product"
# ------------------------------------------------------------#
#  Create Security Group
# ------------------------------------------------------------#
Resources:
  ALBSecurityGroup: # 로드 밸런서의 보안 그룹 리소스 이름 지정
    Type: AWS::EC2::SecurityGroup # 보안 그룹을 생성
    Properties:
      GroupName: !Sub ${SystemName}-${EnvName}-alb-sg # 보안 그룹 이름을 지정
      GroupDescription: !Sub ${SystemName}-${EnvName}-alb-sg # 보안 그룹 설명
      SecurityGroupIngress: # HTTP 80번 포트로 인터넷을 통해 접근할 수 있도록 설정
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      VpcId:
        Fn::ImportValue: !Sub ${EnvName}-vpc
      Tags:
        - Key: Name
          Value: !Sub ${SystemName}-${EnvName}-alb-sg
        - Key: Env
          Value: !Sub ${EnvName}
  EC2SecurityGroup: # EC2 인스턴스의 보안 그룹
    Type: AWS::EC2::SecurityGroup # 보안 그룹을 생성
    Properties:
      GroupName: !Sub ${SystemName}-${EnvName}-ec2-sg # 보안 그룹 이름을 지정
      GroupDescription: !Sub ${SystemName}-${EnvName}-ec2-sg # 보안 그룹 설명
      SecurityGroupIngress: # EC2 인스턴스에서는 로드 밸런서를 통한 접근만을 허용
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !GetAtt ALBSecurityGroup.GroupId # 로드 밸런서의 보안 그룹 지정
      VpcId:
        Fn::ImportValue: !Sub ${EnvName}-vpc
      Tags:
        - Key: Name
          Value: !Sub ${SystemName}-${EnvName}-ec2-sg
        - Key: Env
          Value: !Sub ${EnvName}
# ------------------------------------------------------------
# Output Parameters
# ------------------------------------------------------------
Outputs:
  # Security Groups
  EC2SecurityGroup:
    Value: !Ref EC2SecurityGroup
    Export:
      Name: !Sub ${EnvName}-ec2-sg
  ALBSecurityGroup:
    Value: !Ref ALBSecurityGroup
    Export:
      Name: !Sub ${EnvName}-alb-sg
